Working version
---------------

(Changes that can break existing programs are marked with a "*")

### Compiler user-interface and warnings:

* GPR#2276: Remove support for compiler plugins
  (Mark Shinwell)

### Internal/compiler-libs changes:

- GPR#1579: Add a separate types for clambda primitives
  (Pierre Chambart, review by Vincent Laviron and Mark Shinwell)

- GPR#1965: remove loop constructors in Cmm and Mach
  (Vincent Laviron)

- GPR#1973: fix compilation of catches with multiple handlers
  (Vincent Laviron)

- GPR#2228: refactoring the handling of .cmi files by moving it from
  Env to a new module Persistent_env
  (Gabriel Scherer, review by Jérémie Dimino and Thomas Refis)

- GPR#2229: Env: remove prefix_idents cache
  (Thomas Refis, review by Frédéric Bour and Gabriel Scherer)

- GPR#2265: Add bytecomp/opcodes.mli
  (Mark Shinwell, review by Nicolas Ojeda Bar)

### Runtime system:

- GPR#1725: Deprecate Obj.set_tag
  (Stephen Dolan, review by Gabriel Scherer and Damien Doligez)

* GPR#2240: Constify "identifier" in struct custom_operations
  (Cedric Cellier, review by Xavier Leroy)

### Other libraries:

- GPR#2248: Unix alloc_sockaddr: Fix read of uninitialized memory for an
  unbound Unix socket. Add support for receiving abstract (Linux) socket paths.
  (Tim Cuthbertson, review by Sébastien Hinderer and Jérémie Dimino)

OCaml 4.08.0
------------

### Language features:

- MPR#6422, MPR#7083, GPR#305, GPR#1568: Allow "exception" under or-patterns
  (Thomas Refis, with help and review from Alain Frisch, Gabriel Scherer, Jeremy
  Yallop, Leo White and Luc Maranget)

- GPR#1506, GPR#2147, GPR#2166, GPR#2167: Extended open to arbitrary module
  expression in structures and to applicative paths in signatures
  (Runhang Li, review by Alain Frisch, Florian Angeletti, Jeremy Yallop,
  Leo White and Thomas Refis)

- GPR#1705: Allow @@attributes on exceptions.
  (Hugo Heuzard, review by Gabriel Radanne and Thomas Refis)
